fix tickbox bug on mobile site

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -59,6 +59,8 @@ input:checked+p {
 
 input[type="checkbox"] {
   margin: 20px;
+  flex: 0;
+  transform: scale(1.5);
 }
 
 p {
